차단기능 추가
